--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-		<title>Susans Jeopardy</title>
+		<title>Taylor Swift Jeopardy</title>
 		<link
 			rel="stylesheet"
 			href="https://unpkg.com/papercss@1.6.1/dist/paper.min.css"
